Fix: footer spacing issue

--- a/src/Layout/Footer/Footer.module.scss
+++ b/src/Layout/Footer/Footer.module.scss
@@ -39,6 +39,11 @@
     }
   }
 
+  .left,
+  .right {
+    width: 100%;
+  }
+
   @include respond-to('mobile') {
 
     .left {
